--- a/index.html
+++ b/index.html
@@ -1,100 +1,119 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="css/style2.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
-    <link rel="stylesheet" href="css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Shreekant Website</title>
 </head>
-
 <body>
     <div class="cursor"></div>
-    <nav class="navbar background2 fixed-top ">
-        <ul class="nav-list">
-            <div class="logo "><img src="img/logo.jpg" alt="logo"></div>
-            <li><a href="http://127.0.0.1:5501/Home.html" class="hover-list">Home</a></li>
-            <li><a href="#about" class="hover-list">About</a></li>
-            <li><a href="#services" class="hover-list">Services</a></li>
-            <li><a href="#contact " class="hover-list">Contact</a></li>
-        </ul>
-        <div class="rightNav">
-            <input type="text" name="search" id="search">
-            <button class="btn btn-sm">search</button>
+    <div id="nav">
+        <img class="logo" src="img/logo.jpg" alt=""> 
+        <div id="nav-part2">
+          <h4 class="hover-list1"><a href="http://127.0.0.1:5501/Home.html">home</a></h4>
+          <h4 class="hover-list1">work</h4>
+          <h4 class="hover-list1">contact</h4>
         </div>
         <div id="nav-part3">
-            <div id="circle"></div>
-          </div>
-    </nav>
-    <div class="purple"></div>
+          <div id="circle"></div>
+        </div> 
+      </div>
+      <div class="purple"></div>
     <div class="main">
-        <section class=" firstSection">
-            <video loop muted autoplay src="img/video (2160p).mp4"></video>
-            <div class="box-main">
-                <div class="firstHalf">
-                    <h1 class="text-big hover-list1">Team</h1>
-                    <div class="buttons">
-                        <button class="btn">Watch video</button>
-                    </div>
-                </div>
-                <div class="secondHalf">
-                    <img src="img/logo.jpg" alt="laptop">
-                </div>
+        <div class="page1">
+            <h1>Digitally crafted</h1>
+            <h2>brand expriences</h2>
+            <video autoplay muted loop src="img/production_id_5091624 (1080p).mp4" width="60%"></video>
+        </div>
+        <div class="page2">
+            <h1>welcome to Shreekant website,</h1>
+           <div class="page2-container">
+            <div class="page2-left">
+                <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum reiciend</h2>
             </div>
-
-        </section>
-        <div class="container">
-            <h1 class="title1">Member</h1>
-            <div class="grid-container1 ">
-                <div class="box"><a href="http://127.0.0.1:5501/shreewebsite.html"><img src="img/branding-1.jpg" alt="" height="250" width="250"></a></div>
-                <div class="box"><img src="img/branding-1.jpg" alt="" height="250" width="250"></div>
-                <div class="box"><img src="img/branding-1.jpg" alt="" height="250" width="250"></div>
+            <div class="page2-right">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis itaque quas cupiditate placeat saepe accusamus, nam molestiae atque eaque, dignissimos corporis rem neque praesentium expedita modi sit aspernatur tenetur error.</p>
+                <button>About us</button>
             </div>
-            <div class="content">
-                <div class="content1">
-                    <h1>Shreekant</h1>
-                </div>
-                <div class="content2">
-                    <h1>Atharva</h1>
-                </div>
-                <div class="content3">
-                    <h1>Suhan</h1>
-                </div>
+           </div>
+        </div>
+        <div class="page3">
+            <h1>Selected work</h1>
+            <div class="page3-part1">
+                <img src="img/img.jpg" alt="" height="600px" width="60%">
+                <video autoplay loop muted src="img/pexels-tima-miroshnichenko-5377268 (2160p).mp4 "width="50%" height="500px"></video>
             </div>
-            <div class="item">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi dignissimos eius ipsam, libero
-                    animi<br>
-                    nesciunt! Fugit veniam accusamus libero quo voluptatum, aperiam amet aspernatur, dolore, iure eos
-                    quos!<br>
-                    Sunt cupiditate sapiente odit qui numquam. Delectus ipsam molestiae ullam in dolorum mollitia
-                    aliquid <br>
-                    temporibus impedit molestias quo. Unde nulla eligendi amet dolor, illum nesciunt sequi ducimus. <br>
-                    Cupiditate sit maiores molestias inventore fugit corrupti, vitae laborum voluptatum. Nisi ipsum ab
-                    fugit <br>
-                    vero iusto enim illo id aperiam inventore, nobis perspiciatis explicabo cupiditate quibusdam cumque,
-                    sed <br>
-                    voluptatum quos ipsam. Obcaecati reprehenderit vero delectus nisi ea illo eveniet expedita. Libero
-                    ab <br>
-                    voluptas delectus at.</p>
+            <div class="video1">
+                <video autoplay loop muted src="img/pexels-tima-miroshnichenko-5377697 (2160p).mp4"width="50%" height="400px"></video>
+                <video autoplay loop muted src="img/pexels-tima-miroshnichenko-5377700 (2160p).mp4" width="50%" height="500px"></video>
             </div>
             <div>
-
+                <video src=""></video>
             </div>
-
         </div>
+        <div class="page4">
+            <div class="elem">
+                <img src="img/blog1.jpg" alt="" height="200px" width="300px">
+                <div class="text-div">
+                    <h1>Strategy</h1>
+                    <h1>Strategy</h1>
+                </div>
+                <img src="img/blog2.jpg" alt="" height="300px" width="300px">
+            </div>
+            <div class="elem">
+                <img src="img/blog1.jpg" alt="" height="200px" width="300px">
+                <div class="text-div">
+                    <h1>Strategy</h1>
+                    <h1>Strategy</h1>
+                </div>
+                <img src="img/blog2.jpg" alt="" height="300px" width="300px">
+            </div>
+            <div class="elem">
+                <img src="img/blog1.jpg" alt="" height="200px" width="300px">
+                <div class="text-div">
+                    <h1>Strategy</h1>
+                    <h1>Strategy</h1>
+                </div>
+                <img src="img/blog2.jpg" alt="" height="300px" width="300px">
+            </div>
+        </div>
+        <div class="page5">
+            <h2>Mentions Clients</h2>
+            <div class="box" 
+            data-image="https://images.unsplash.com/photo-1688232543149-5602b136ba11?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHx0b3BpYy1mZWVkfDExfGJvOGpRS1RhRTBZfHxlbnwwfHx8fHw%3D&auto=format&fit=crop&w=500&q=60">
+            <h3></h3>
+                <h4>2021</h4>
+            </div>
+            <div class="box" 
+            data-image="https://images.unsplash.com/photo-1688103920333-117afda88518?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHx0b3BpYy1mZWVkfDMwfGJvOGpRS1RhRTBZfHxlbnwwfHx8fHw%3D&auto=format&fit=crop&w=500&q=60">
+            <h3></h3>
+                <h4>2021</h4>
+            </div>
+            <div class="box" 
+            data-image="https://images.unsplash.com/photo-1686904423955-b928225c6488?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHx0b3BpYy1mZWVkfDg1fGJvOGpRS1RhRTBZfHxlbnwwfHx8fHw%3D&auto=format&fit=crop&w=500&q=60">
+            <h3></h3>
+                <h4>2021</h4>
+            </div>
+            <div class="box" 
+            data-image="https://images.unsplash.com/photo-1688362809005-e1d27bf427ac?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHx0b3BpYy1mZWVkfDd8Ym84alFLVGFFMFl8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=500&q=60">
+            <h3></h3>
+                <h4>2021</h4>
+            </div>
+            <div class="box" 
+            data-image="https://images.unsplash.com/photo-1687913161653-7cddb0ba09b0?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=736&q=80">
+            <h3></h3>
+                <h4>2021</h4>
+            </div>
+        </div>
+        <footer>
+
+        </footer>
     </div>
-
-
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"
-        integrity="sha512-16esztaSRplJROstbIIdwX3N97V1+pZvV33ABoG1H2OyTttBxEGkTsoIVsiP1iaTtM8b3+hu2kB6pQ4Clr5yug=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"
-        integrity="sha512-Ic9xkERjyZ1xgJ5svx3y0u3xrvfT/uPkV99LBwe68xjy/mGtO+4eURHZBW2xW4SZbFrF1Tf090XqB+EVgXnVjw=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js" integrity="sha512-16esztaSRplJROstbIIdwX3N97V1+pZvV33ABoG1H2OyTttBxEGkTsoIVsiP1iaTtM8b3+hu2kB6pQ4Clr5yug==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js" integrity="sha512-Ic9xkERjyZ1xgJ5svx3y0u3xrvfT/uPkV99LBwe68xjy/mGtO+4eURHZBW2xW4SZbFrF1Tf090XqB+EVgXnVjw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
-    <script src="js/website1.js"></script>
+    <script src="js/website.js"></script>
 </body>
-
 </html>
